# effective_energy_shift

./: README.md  __init__.py  chronological_ref_alg.py  demo_notebook.ipynb  devbook.ipynb  efes_plotting.py  environment.yml  main.py  mefes_dataclasses.py  mefes_event_decorators.py  mefes_log_decorators.py  mefes_test_decorators.py  mefes_tex_decorators.py  more_effective_energy_shift.py  pyproject.toml
efes/: __init__.py
efes/adapters/observability/: plotting_observer.py
efes/adapters/scenarios/: example_inputs.py  plotting.py  serialization.py
efes/application/: use_cases.py
efes/domain/: errors.py  models.py  ports.py  services.py
efes/scripts/: run_example.py
efes_core/: __init__.py
efes_core/adapters/observability/: logging_observer.py  observers.py
efes_core/adapters/scenarios/: example_inputs.py  formatting.py  parameter_study_store.py  persistence.py  plotting.py  serialization.py
efes_core/application/: parameter_study.py  use_cases.py
efes_core/domain/: enums.py  errors.py  math_energy_systems.py  models.py  ports.py  services.py
efes_core/scripts/: chronological_ref_alg.py
mefes/: __init__.py
mefes/adapters/observability/: logging_observer.py  pretty_print.py
mefes/adapters/scenarios/: example_inputs.py  worst_case_inputs.py
mefes/application/: use_cases.py
mefes/debug/: bootstrap_debug.py  event_decorators.py  test_decorators.py  tex_decorators.py
mefes/domain/: errors.py  models.py  ports.py  services.py
mefes/scripts/: _common.py  run_example.py
